--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ cache:
     - vendor/bundle
     - /home/travis/.rvm/
 
+branches:
+  only:
+  - master
+
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
