--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -5,7 +5,7 @@ update_configs:
     directory: "/"
     update_schedule: "live"
     default_reviewers:
-    - aav7fl
+    - "aav7fl"
 
   - package_manager: "javascript"
     directory: "/"
