--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -6,9 +6,17 @@ update_configs:
     update_schedule: "live"
     default_reviewers:
     - "aav7fl"
+    automerged_updates:
+      - match:
+          dependency_type: "all"
+          update_type: "semver:minor"    
 
   - package_manager: "javascript"
     directory: "/"
     update_schedule: "live"
     default_reviewers:
     - "aav7fl"
+    automerged_updates:
+      - match:
+          dependency_type: "all"
+          update_type: "semver:minor"    
