--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,7 +3,7 @@ version: 1
 update_configs:
   - package_manager: "ruby:bundler"
     directory: "/"
-    update_schedule: "live"
+    update_schedule: "daily"
     default_reviewers:
     - "aav7fl"
     automerged_updates:
@@ -13,7 +13,7 @@ update_configs:
 
   - package_manager: "javascript"
     directory: "/"
-    update_schedule: "live"
+    update_schedule: "daily"
     default_reviewers:
     - "aav7fl"
     automerged_updates:
