--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 
 before_install:
+  # https://bundler.io/blog/2019/05/14/solutions-for-cant-find-gem-bundler-with-executable-bundle.html
+  - gem update --system
   - gem install bundler
 
 install:
