--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,10 @@ updates:
   schedule:
     interval: daily
     time: "09:00"
+  labels:
+    - "dependencies"
+    # Add default Kodiak `merge.automerge_label`
+    - "automerge"    
   open-pull-requests-limit: 10
   reviewers:
   - aav7fl
@@ -13,6 +17,10 @@ updates:
   schedule:
     interval: daily
     time: "09:00"
+  labels:
+    - "dependencies"
+    # Add default Kodiak `merge.automerge_label`
+    - "automerge"
   open-pull-requests-limit: 10
   reviewers:
   - aav7fl
