--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,4 @@ AllCops:
   Exclude:
     - vendor/**/* # Ignore Travis-CI build directory
     - node_modules/**/* # Ignore node modules directory
+  SuggestExtensions: false
