Add water utility tracking blog post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "-l"
     ],
     "git.enableSmartCommit": true,
-    "git.postCommitCommand": "push"
+    "git.postCommitCommand": "push",
+    "remote.localPortHost": "allInterfaces"
 }
