Rename some twitter references

--- a/_data/footer.yaml
+++ b/_data/footer.yaml
@@ -2,8 +2,8 @@
   url: https://www.linkedin.com/in/kyleniewiada/
 - name: GitHub
   url: https://github.com/aav7fl
-- name: Twitter
-  url: https://twitter.com/CrypticCitrus
+- name: X
+  url: https://x.com/CrypticCitrus
 - name: YouTube
   url: https://www.youtube.com/user/KyleNiewiada
 - name: BandCamp
