--- a/_data/footer.yaml
+++ b/_data/footer.yaml
@@ -9,5 +9,7 @@
 - name: BandCamp
   url: https://kyleniewiada.bandcamp.com/
   nofollow: true
+- name: RSS
+  url: /feed.xml
 - name: Sitemap
   url: /sitemap/
