Add BirdNET-Go/Home Assistant blog post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     ],
     "git.enableSmartCommit": true,
     "git.postCommitCommand": "push",
-    "remote.localPortHost": "allInterfaces"
+    "remote.localPortHost": "allInterfaces",
+    "cSpell.words": [
+        "cooldown"
+    ]
 }
