--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,13 +1,23 @@
 # https://github.com/dependabot/fetch-metadata
 name: Dependabot auto-merge
-on: pull_request
+
+on:
+  workflow_run:
+    workflows: ["build-and-test"]
+    types:
+      - completed
+
 permissions:
   pull-requests: write
   contents: write
+
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'aav7fl/website'
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.pull_request.user.login == 'dependabot[bot]' &&
+      github.repository == 'aav7fl/website'
     steps:
       - name: Dependabot metadata
         id: dependabot-metadata
