--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -2,10 +2,8 @@
 name: Dependabot auto-merge
 
 on:
-  pull_request:
-    branches: [ main ]
   workflow_run:
-    workflows: ["build-and-test"]
+    workflows: [Build and test]
     types:
       - completed
 
