--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -15,6 +15,9 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Build
         run: bundle exec rake build
+        # Build twice to resolve weird AMP issues
+      - name: Build
+        run: bundle exec rake build
       - name: Deploy # Taken from: https://github.com/Leo3418/leo3418.github.io/tree/jekyll/.github/workflows
         run: |
           cd _site/
